--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "npx nodemon src/index.js"
+    "start": "babel-node src/index.js",
+    "dev": "npx nodemon src/index.js",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,16 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.20",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.22.20",
+    "nodemon": "^3.0.1",
+    "serverless-offline": "^13.0.0",
+    "serverless-plugin-optimize": "^4.2.1-rc.1"
   }
 }
